@@ -759,3 +759,13 @@
 #no-tlsv1
 #no-tlsv1_1
 #no-tlsv1_2
+
+# Disable RFC5780 (NAT behavior discovery).
+#Originally, if there are more than one listener address from the same
+#address family, then by default the NAT behavior discovery feature enabled.
+#This option disables the original behavior, because the NAT behavior discovery
+#adds extra attributes to response, and this increase the possibility of
+#an amplification attack.
+#Strongly encouraged to use this option to decrease gain factor in STUN binding responses.
+#
+no-rfc5780
